--- a/public/index.html
+++ b/public/index.html
@@ -529,7 +529,7 @@
                 <div class="row-3">
                     <div class="col-2">
                         <nav class="footer__nav">
-                            <ul class="main-menu">
+                            <ul class="main-menu main-menu--listable">
                                 <li class="main-menu-item main-menu-item--active">
                                     <a class="main-menu-item__link" href="#">{{ menu_home }}</a>
                                 </li>
@@ -549,7 +549,7 @@
                         </nav>
                     </div>
                     <div class="col-1">
-                        <div class="footer__copyright col-1">{{ copyright }}</div>
+                        <div class="footer__copyright">{{ copyright }}</div>
                     </div>
                 </div>
                 <div class="footer__social">
