--- a/public/page.html
+++ b/public/page.html
@@ -3,73 +3,220 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <!-- Tahoma - trial. No commercial use !!! -->
+    <script type="text/javascript">
+        (function () {
+            var path = '//easy.myfonts.net/v2/js?sid=131875(font-family=Tahoma+Bold)&sid=131902(font-family=Tahoma)&key=WTKRaNIOE0',
+                    protocol = ('https:' == document.location.protocol ? 'https:' : 'http:'),
+                    trial = document.createElement('script');
+            trial.type = 'text/javascript';
+            trial.async = true;
+            trial.src = protocol + path;
+            var head = document.getElementsByTagName("head")[0];
+            head.appendChild(trial);
+        })();
+    </script>
+
+    <!-- Stencil - trial. No commercial use !!! -->
+    <script type="text/javascript">
+        (function () {
+            var path = '//easy.myfonts.net/v2/js?sid=5443(font-family=Stencil+D)&key=tDAwRieiWu',
+                    protocol = ('https:' == document.location.protocol ? 'https:' : 'http:'),
+                    trial = document.createElement('script');
+            trial.type = 'text/javascript';
+            trial.async = true;
+            trial.src = protocol + path;
+            var head = document.getElementsByTagName("head")[0];
+            head.appendChild(trial);
+        })();
+    </script>
+
     <link rel="stylesheet" href="/css/vendor/normalize.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
-<body class="page">
+<body>
+<div class="page">
     <div class="page-container">
         <header class="header">
             <div class="header__logo">
                 <div class="header-logo">
-                    <img class="header-logo__img" src="" alt="">
-                    <span class="header-logo__span"></span>
+                    <img class="header-logo__img" src="img/DOT.png" alt="logo">
+                    <span class="header-logo__text">SOFTWARE STUDIO</span>
                 </div>
             </div>
             <nav class="header__nav">
-                <ul class="main-menu">
-                    <li class="main-menu__item">
-                        <a class="main-menu__link" href="#">{{ menu_home }}</a>
+                <ul class="main-menu main-menu--sandwich">
+                    <li class="main-menu-item">
+                        <a class="main-menu-item__link" href="#" target="_blank">
+                            Menu
+                        </a>
                     </li>
-                    <li class="main-menu__item--active">
-                        <a class="main-menu__link" href="#">{{ menu_services }}</a>
+                </ul>
+                <ul class="main-menu main-menu--collapsable">
+                    <li class="main-menu-item main-menu-item--active">
+                        <a class="main-menu-item__link" href="#" target="_blank">Home</a>
                     </li>
-                    <li class="main-menu__item">
-                        <a class="main-menu__link--hover" href="#">{{ menu_company }}</a>
+                    <li class="main-menu-item">
+                        <a class="main-menu-item__link" href="#" target="_blank">Services</a>
+                    </li>
+                    <li class="main-menu-item">
+                        <a class="main-menu-item__link" href="#" target="_blank">Company</a>
+                    </li>
+                    <li class="main-menu-item">
+                        <a class="main-menu-item__link" href="#" target="_blank">Careers</a>
+                    </li>
+                    <li class="main-menu-item">
+                        <a class="main-menu-item__link" href="#" target="_blank">Contact Us</a>
                     </li>
                 </ul>
             </nav>
         </header>
-        <section class="subheader">
-            <div class="subheader__title"></div>
-            <div class="subheader__app-links"></div>
-        </section>
+    </div>
+    <div class="subheader-container">
+        <div class="page-container">
+            <section class="subheader">
+                <div class="subheader__title">European Mobile Application Development Company</div>
+            </section>
+        </div>
+    </div>
+    <div class="app-links-container">
+        <div class="app-links-container__shadow"></div>
+        <div class="page-container">
+            <section class="app-links">
+                <div class="app-links__element">
+                    <a href="#" class="app-link app-link--hover" target="_blank">
+                            <span class="app-link__img">
+                                <img src="/img/buseness_apps.png" alt="">
+                            </span>
+                            <span class="app-link__title">
+                                Business Apps
+                            </span>
+                    </a>
+                </div>
+                <div class="app-links__element">
+                    <a href="#" class="app-link" target="_blank">
+                            <span class="app-link__img">
+                                <img src="/img/entertaiment_apps.png" alt="">
+                            </span>
+                            <span class="app-link__title">
+                                Entertainment Apps
+                            </span>
+                    </a>
+                </div>
+                <div class="app-links__element">
+                    <a href="#" class="app-link" target="_blank">
+                            <span class="app-link__img">
+                                <img src="/img/gaming_apps.png" alt="">
+                            </span>
+                            <span class="app-link__title">
+                                Gaming Apps
+                            </span>
+                    </a>
+                </div>
+            </section>
+        </div>
+    </div>
+    <div class="page-container">
         <section class="row-3">
             <article class="col-2">
-                <p class="page-paragraph"></p>
-                <p class="page-paragraph"></p>
-                <p class="page-lead"></p>
-                <p class="page-paragraph"></p>
-                <p class="page-paragraph"></p>
-                <p class="page-paragraph"></p>
+                <p class="page-paragraph">Mobile phone application development for businesses from all arount the world across all major smartphone platforms.</p>
+                <p class="page-paragraph">We can take your business mobile with fast &amp; affordable mobile application development, which could potentially deliver your products or services to millions of people.</p>
+                <p class="page-lead">Our first class mobile application development team will<br>design and build an application specifically for your company!</p>
+                <p class="page-paragraph">We can provide you with any mobile application (for iPhone, Android or Windows) be it a game, simple advertisement, educational or business application of any level of complexity.</p>
+                <p class="page-paragraph">Smartphone's are everywhere and many of your customers will be using them, isn't it time you considered app development and took your business mobile?</p>
+                <p class="page-paragraph">Now is the time to take your company mobile through a dedicated &amp; branded application. Remember, while you are thinking about it, your competitors are doing it - so don't delay - take action today.</p>
                 <div class="page-callout">
-                    <span></span>
-                <span class="page-phone-number">
-                    <span class="page-phone-number__prefix"></span>
-                </span>
-                    <span></span>
+                    <span>If you're considering mobile application development, then call one of our consultants now on</span>
+                    <span class="page-phone-number">
+                        <span class="page-phone-number__prefix">+371</span> 2 9153367
+                    </span>
+                    <span>to see how you could get your business mobile</span>
                 </div>
             </article>
             <aside class="col-1">
+                <div class="quote-box">
+                    <div class="quote-box__header">Request for quote</div>
+                    <div class="quote-box__content">
+                        <form class="quote-form">
+                            <!--  Yep, bootstrap style -->
+                            <div class="form-group form-group">
+                                <label class="form-group__label" for="name1">Your Name</label>
+                                <input type="text" class="form-group__form-control form-group__form-control--focus" id="name1" value="onFocus">
+                            </div>
+                            <div class="form-group form-group">
+                                <label class="form-group__label" for="email1">E-mail</label>
+                                <input type="email" class="form-group__form-control" id="email1">
+                            </div>
+                            <div class="form-group form-group">
+                                <label class="form-group__label" for="message1">Message</label>
+                                <textarea class="form-group__form-control" id="message1" aria-describedby="helpBlock1"></textarea>
+                            </div>
 
+                            <div class="quote-form__submit">
+                                <button class="button">SEND</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+                <div class="quote-box">
+                    <div class="quote-box__header">Client testimonials</div>
+                    <div class="quote-box__content">
+                        <div class="quote">
+                            <div class="quote__header">
+                                Jeff Richards
+                            </div>
+                            <div class="quote__subheader">
+                                YellowPages Company
+                            </div>
+                            <div class="quote__body">
+                                We were and still are on a mission to change the world as we know it. Six years and lots of blood, sweat, and tears later, we know how.
+                            </div>
+                            <div class="quote__link">
+                                <a href="#" class="button" target="_blank">Lear More</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </aside>
         </section>
-        <footer class="footer row-3">
-            <nav class="footer__nav">
-                <ul class="main-menu">
-                    <li class="main-menu__item">
-                        <a class="main-menu__link" href="#">{{ menu_home }}</a>
-                    </li>
-                    <li class="main-menu__item--active">
-                        <a class="main-menu__link" href="#">{{ menu_services }}</a>
-                    </li>
-                    <li class="main-menu__item">
-                        <a class="main-menu__link" href="#">{{ menu_company }}</a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="ooter__copyright"></div>
-            <div class="ooter__social"></div>
-        </footer>
     </div>
+    <footer class="footer">
+        <div class="page-container">
+            <div class="row-3">
+                <div class="col-2">
+                    <nav class="footer__nav">
+                        <ul class="main-menu main-menu--listable">
+                            <li class="main-menu-item main-menu-item--active">
+                                <a class="main-menu-item__link" href="#" target="_blank">Home</a>
+                            </li>
+                            <li class="main-menu-item">
+                                <a class="main-menu-item__link" href="#" target="_blank">Services</a>
+                            </li>
+                            <li class="main-menu-item">
+                                <a class="main-menu-item__link" href="#" target="_blank">Company</a>
+                            </li>
+                            <li class="main-menu-item">
+                                <a class="main-menu-item__link" href="#" target="_blank">Careers</a>
+                            </li>
+                            <li class="main-menu-item">
+                                <a class="main-menu-item__link" href="#" target="_blank">Contact Us</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="col-1">
+                    <div class="footer__copyright">Copyright © 2012 DOT 44. All rights Reserved.</div>
+                </div>
+            </div>
+            <div class="footer__social">
+                <a href="#" class="social-link" target="_blank"><img src="img/facebook.png" alt="facebook"></a>
+                <a href="#" class="social-link" target="_blank"><img src="img/twitter.png" alt="twitter"></a>
+                <a href="#" class="social-link" target="_blank"><img src="img/linked_in.png" alt="linked_in"></a>
+            </div>
+        </div>
+    </footer>
+</div>
 </body>
 </html>
