--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Makeup demo</title>
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>AXIOMA test</title>
+    <meta name="description" content="AXIOMA test">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="/css/vendor/normalize.css">
 
     <!-- Tahoma - trial. No commercial use !!! -->
