--- a/public/index.html
+++ b/public/index.html
@@ -23,19 +23,8 @@
         })();
     </script>
 
-    <!-- Stencil - trial. No commercial use !!! -->
-    <script type="text/javascript">
-        (function () {
-            var path = '//easy.myfonts.net/v2/js?sid=5443(font-family=Stencil+D)&key=tDAwRieiWu',
-                    protocol = ('https:' == document.location.protocol ? 'https:' : 'http:'),
-                    trial = document.createElement('script');
-            trial.type = 'text/javascript';
-            trial.async = true;
-            trial.src = protocol + path;
-            var head = document.getElementsByTagName("head")[0];
-            head.appendChild(trial);
-        })();
-    </script>
+    <!-- Stencil -->
+    <link href="http://allfont.ru/allfont.css?fonts=stencil" rel="stylesheet" type="text/css" />
 
     <!--[if gt IE 8]><!-->
     <link rel="stylesheet" href="/js/vendor/makeup/makeup.css">
