--- a/public/page.html
+++ b/public/page.html
@@ -4,33 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <!-- Tahoma - trial. No commercial use !!! -->
-    <script type="text/javascript">
-        (function () {
-            var path = '//easy.myfonts.net/v2/js?sid=131875(font-family=Tahoma+Bold)&sid=131902(font-family=Tahoma)&key=WTKRaNIOE0',
-                    protocol = ('https:' == document.location.protocol ? 'https:' : 'http:'),
-                    trial = document.createElement('script');
-            trial.type = 'text/javascript';
-            trial.async = true;
-            trial.src = protocol + path;
-            var head = document.getElementsByTagName("head")[0];
-            head.appendChild(trial);
-        })();
-    </script>
-
-    <!-- Stencil - trial. No commercial use !!! -->
-    <script type="text/javascript">
-        (function () {
-            var path = '//easy.myfonts.net/v2/js?sid=5443(font-family=Stencil+D)&key=tDAwRieiWu',
-                    protocol = ('https:' == document.location.protocol ? 'https:' : 'http:'),
-                    trial = document.createElement('script');
-            trial.type = 'text/javascript';
-            trial.async = true;
-            trial.src = protocol + path;
-            var head = document.getElementsByTagName("head")[0];
-            head.appendChild(trial);
-        })();
-    </script>
+    <!-- Stencil -->
+    <link href="http://allfont.ru/allfont.css?fonts=stencil" rel="stylesheet" type="text/css" />
 
     <link rel="stylesheet" href="/css/vendor/normalize.css">
     <link rel="stylesheet" href="/css/style.css">
