--- a/public/page.html
+++ b/public/page.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>AXIOMA test</title>
+    <meta name="description" content="AXIOMA test">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Stencil -->
     <link href="http://allfont.ru/allfont.css?fonts=stencil" rel="stylesheet" type="text/css" />
